--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "modinstalleruijs",
   "productName": "SFS ModInstaller",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "main.js",
   "homepage": ".",
   "scripts": {
@@ -10,7 +10,8 @@
     "build": "react-app-rewired build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "packagelinux": "electron-builder -l --universal",
-    "package": "electron-builder -w --x64"
+    "package": "electron-builder -w --x64",
+    "publish": "electron-builder -w --x64 --publish always"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "crypto-browserify": "^3.12.0",
     "electron-dl": "^3.5.0",
     "electron-renderer": "^2.0.4",
+    "electron-updater": "^5.3.0",
     "install": "^0.13.0",
     "js-md5": "^0.7.3",
     "level-js": "^2.2.4",
@@ -60,6 +62,13 @@
   },
   "build": {
     "appId": "xyz.0xnim.sfs.modinstaller.ui.electron",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "Nim1com",
+        "repo": "ModInstallerUIPublic"
+      }
+    ],
     "win": {
       "target": "nsis",
       "icon": "src/png.ico"
