--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "modinstalleruijs",
   "productName": "SFS ModInstaller",
-  "version": "1.0.5",
-  "main": "main.js",
+  "version": "1.0.6",
+  "main": "public/electron.js",
   "homepage": ".",
   "scripts": {
-    "start": "electron main.js",
+    "start": "electron .",
     "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "echo \"Error: no test specified\" && exit 1",
