--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "core-js": "^3.27.2",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
+    "dialog-polyfill": "^0.5.6",
     "electron-dl": "^3.5.0",
     "electron-log": "^4.4.8",
     "electron-renderer": "^2.0.4",
